--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,46 @@
 .App {
-  font-family: sans-serif;
-  text-align: center;
+  text-align: left;
+  box-sizing: border-box;
+  padding: 0 1em;
+  width: 960px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 240px 720px; /* creating 2 columns */
+  /* note: grid-template-rows many times is not needed, since already created (i.e. implict grid) */
+  grid-gap: 20px; /* space in-betwen grid-items (columns) */
+}
+
+mainheader {
+  grid-column: 1/3;
+  grid-row: 1;
+  display: block;
+  /* font-size: 3rem; */
+  color: #666;
+  border-bottom: 1px dotted #999;
+  margin: 1em 0 1em 0;
+}
+
+mainheader h1 span {
+  display: block;
+  font-size: 3rem;
+  color: #666;
+}
+content {
+  grid-column: 2; /* starts and ends at column 2 (already set buy default in layout */
+  grid-row: 2; /*  starts and ends at row 2 */
+}
+
+panel {
+  grid-column: 1; /* starts and ends at column 1*/
+  grid-row: 2; /*  starts and ends at row 2 */
+  background-color: #efefef;
+  padding: 10px;
+}
+
+mainfooter {
+  grid-column: 1/3; /* spanning betweeen column 1 to column 3 (spans 1 column by default) */
+  grid-row: 3; /*  will be in row 3 by default based upon layout of HTML */
+  background-color: #666;
+  color: #fff;
+  padding: 10px;
 }
